<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/calculatorToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAns"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"

        android:text = "@string/zero"
        android:textAlignment="viewEnd"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorToolbar" />

    <TextView
        android:id="@+id/txtCalc"
        android:layout_width="320dp"
        android:layout_height="60dp"

        android:textAlignment="viewEnd"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAns" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/zero"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btnNegative"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"

        android:text="@string/one"
        android:textSize="36sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/two"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/three"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"

        android:text="@string/four"
        android:textSize="36sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/five"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/six"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:layout_marginStart="5dp"
        android:text="@string/seven"

        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/eight"

        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btnBracket" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/nine"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/decimal_point"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btnNegative"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"

        android:text="@string/invert_number"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/add"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/subtract"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/multiply"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"

        android:text="@string/divide"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalc" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="85dp"
        android:layout_height="85dp"

        android:text="@string/equals"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnBracket"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"

        android:text="@string/brackets"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/txtCalc" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"

        android:text="@string/percentage"
        android:textSize="36sp"

        app:layout_constraintStart_toEndOf="@+id/btnBracket"
        app:layout_constraintTop_toBottomOf="@+id/txtCalc" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"

        android:text="@string/clear_answer"
        android:textSize="36sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalc" />
</androidx.constraintlayout.widget.ConstraintLayout>